--- a/css/header.css
+++ b/css/header.css
@@ -8,39 +8,34 @@
 
 .header {   
     display: flex;
-/*
-    flex-direction: row-reverse;
-    align-items: flex-end;
-*/
-   
 }
 
 #signin-modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%; 
+    height: 100%;
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
 }
 
 #signup-modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
 }
 
 .modal-content {
@@ -64,11 +59,10 @@
     font-family: 'Abel';
     border: 0;
     font-weight: 600;
-    margin: 5px 0px 15px; //8px;
+    margin: 5px 0px 15px; 
 }
 
 .modal-content label {
-    //padding: 8px;
     font-family: 'Abel';
     font-weight: 600;
 }
@@ -100,7 +94,7 @@
     justify-content: center;
     font-family: 'Abel';
 }
-/* The Close Button */
+
 .close {
   color: #aaaaaa;
   float: right;
@@ -115,17 +109,6 @@
   cursor: pointer;
 }
 
-/* Set a style for the rest of the elements besides the header elements on the index.html page */
-
-/*
-.postButtons {
-    display: flex;
-    justify-content: center;
-    
-    align-items: center;
-    
-}
-*/
 .header button {
     background-color: #1230b4;
     padding: 10px 20px;
