--- a/css/post.css
+++ b/css/post.css
@@ -13,12 +13,10 @@
 .blogAuthor {
     font-family: 'Niconne', cursive;
     font-size: 30px;
-}
-
-.blogAuthor button {
-    position: absolute;
-    top: 180px;
-    right: 110px    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .blogContent{
@@ -60,4 +58,11 @@
 
 .commentspara {
     margin: 20px 10px;
+}
+
+#heading {
+    width: 17%;
+    font-weight: 600;
+    font-size: 22px;
+    font-family: 'Abel', sans-serif;
 }
