--- a/css/index.css
+++ b/css/index.css
@@ -32,3 +32,27 @@ body{
     font-weight: bold;
     font-size: 15px;
 } 
+
+#create-post-modal {
+  display: none;
+  position: fixed; 
+  z-index: 1;
+  padding-top: 100px; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4);
+}
+
+#create-post-form textarea {
+    padding: 12px;
+    background-color: #f1f1f1;
+    color: #b6aba4;
+    font-family: 'Abel';
+    border: 0;
+    font-weight: 600;
+    margin: 5px 0px 15px;  
+}
